@startuml

title __GUI's Class Diagram__\n

  namespace de.haw {
    namespace gui {
      class de.haw.gui.GeneratorController {
          + btn_Generate : Button
          + btn_Select_Template : Button
          + hBox_Templates : HBox
          + scrollPane : ScrollPane
          + tilePane_Templates : TilePane
          + titledPane_Branching_Structure : TitledPane
          {static} - LOGGER : Logger
          - selectedTemplateParent : VBox
          + GeneratorController()
          + apply()
          + cancel()
          + exit()
          + generate()
          + getSelectedTemplatePane()
          + loadTemplates()
          + openFileLocation()
          + reset()
          + selectTemplate()
          + setState()
          - initPropertyTable()
          - initSelectedTemplateView()
          - initialize()
      }
    }
  }
  

  namespace de.haw {
    namespace gui {
      class de.haw.gui.GeneratorController.PropertyCell {
          - textField : TextField
          + cancelEdit()
          + startEdit()
          # updateItem()
          - PropertyCell()
          - createTextField()
          - getString()
      }
    }
  }
  

  namespace de.haw {
    namespace gui {
      interface de.haw.gui.Selectable {
          {abstract} + init()
          {abstract} + isSelected()
          {abstract} + select()
          {abstract} + unselect()
      }
    }
  }
  

  namespace de.haw {
    namespace gui {
      class de.haw.gui.State {
          - anchors : ObservableList<Anchor>
          - availableAnchors : FilteredList<Anchor>
          - currentDraft : List<Shape>
          - scene : Scene
          + State()
          + addAnchor()
          + addShape()
          + clearCurrentDraft()
          + getAvailableAnchors()
          + getCurrentDraft()
          + getScene()
          + getSelectedAnchor()
          + reset()
          + selectAnchor()
          + selectFirst()
      }
    }
  }
  

  de.haw.gui.GeneratorController o-- de.haw.gui.structure.BranchingStructurePane : paneBranchingStructure
  de.haw.gui.GeneratorController o-- de.haw.gui.State : state
  de.haw.gui.GeneratorController +-down- de.haw.gui.GeneratorController.PropertyCell
  de.haw.gui.GeneratorController.PropertyCell -up-|> javafx.scene.control.TableCell


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
